--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -76,7 +76,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerHorizontal="true"
                         android:layout_centerVertical="true"
-                        android:text="Profile"
+                        android:text="@string/profile"
                         android:textColor="@color/white"
                         android:textSize="18sp"
                         android:textStyle="bold|normal" />
@@ -106,7 +106,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
                     android:gravity="center"
-                    android:text="Full Name"
+                    android:text="@string/full_name"
                     android:textColor="@color/black"
                     android:textSize="25sp"
                     android:textStyle="bold|normal" />
@@ -117,7 +117,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:gravity="center"
-                    android:text="Actor"
+                    android:text="@string/actor"
                     android:textColor="@color/black"
                     android:textSize="18sp"
                     android:textStyle="normal" />
@@ -134,8 +134,9 @@
                         android:layout_width="170dp"
                         android:layout_height="wrap_content"
                         android:background="@drawable/btn_round_1"
+                        android:layout_marginBottom="10dp"
                         android:clickable="true"
-                        android:text="Edit Profile"
+                        android:text="@string/edit_profile"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="16sp"
@@ -146,9 +147,10 @@
                         android:layout_width="170dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="25dp"
+                        android:layout_marginBottom="10dp"
                         android:background="@drawable/btn_round_1"
                         android:clickable="true"
-                        android:text="Change Password"
+                        android:text="@string/change_password"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="16sp"
@@ -205,7 +207,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Email Address"
+                                    android:text="@string/email_address"
                                     android:textSize="14sp"
                                     android:textStyle="bold"
                                     android:textColor="@color/grey_mid"
@@ -253,7 +255,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Gender"
+                                    android:text="@string/gender"
                                     android:textSize="14sp"
                                     android:textStyle="bold"
                                     android:textColor="@color/grey_mid"
@@ -265,7 +267,7 @@
                                 android:id="@+id/genderTV"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:hint="Gender"
+                                android:hint="@string/gender"
                                 android:textStyle="bold"
                                 android:textColor="@color/black"
                                 android:textSize="17sp"
@@ -303,7 +305,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Phone Number"
+                                    android:text="@string/phone_number"
                                     android:textSize="14sp"
                                     android:textStyle="bold"
                                     android:textColor="@color/grey_mid"
@@ -350,7 +352,7 @@
                                 <TextView
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="Address"
+                                    android:text="@string/address"
                                     android:textSize="14sp"
                                     android:textStyle="bold"
                                     android:textColor="@color/grey_mid"
@@ -368,7 +370,7 @@
                                     android:id="@+id/addressTV"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:hint="Your address"
+                                    android:hint="@string/your_address"
                                     android:textStyle="bold"
                                     android:textColor="@color/black"
                                     android:textSize="17sp"
@@ -386,7 +388,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:paddingBottom="10dp"
+                    android:layout_marginTop="10dp"
                     android:gravity="center"
                     android:layout_marginVertical="70dp"
                     android:layout_marginHorizontal="12dp">
@@ -396,7 +398,9 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="@drawable/btn_round_2"
-                        android:text="Sign Out"
+                        android:layout_marginTop="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="@string/sign_out"
                         android:textAllCaps="false"
                         android:textColor="@color/white"
                         android:textSize="16sp"
