--- a/app/src/main/res/layout/activity_profile_edit.xml
+++ b/app/src/main/res/layout/activity_profile_edit.xml
@@ -41,7 +41,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Actor"
+        android:hint="@string/actor"
         android:layout_marginTop="10dp">
         <AutoCompleteTextView
             android:id="@+id/levelUser_DropDown"
@@ -60,7 +60,7 @@
             android:id="@+id/fullName_profile_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Full Name">
+            android:hint="@string/full_name">
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -68,7 +68,7 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Gender"
+        android:hint="@string/gender"
         android:layout_marginTop="10dp">
         <AutoCompleteTextView
             android:id="@+id/gender_DropDown"
@@ -87,7 +87,7 @@
             android:id="@+id/phone_profile_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Phone"
+            android:hint="@string/phone_number"
             android:inputType="number">
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
@@ -101,7 +101,7 @@
             android:id="@+id/address_profile_ET"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Address"
+            android:hint="@string/address"
             android:inputType="text">
         </com.google.android.material.textfield.TextInputEditText>
     </com.google.android.material.textfield.TextInputLayout>
@@ -111,7 +111,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Save"
+        android:text="@string/save"
         android:textSize="14sp"
         android:textColor="@color/white"
         android:textStyle="bold"
@@ -122,7 +122,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
-        android:text="Back"
+        android:text="@string/back"
         android:textSize="14sp"
         android:textColor="@color/white"
         android:textStyle="bold"
