--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginHorizontal="16dp"
-                android:text="Sign In"
+                android:text="@string/sign_in"
                 android:textStyle="normal|bold"
                 android:textSize="28sp"
                 android:textAllCaps="false"
@@ -56,7 +56,7 @@
                     style="@style/LoginTextInputInnerFieldStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Type your Email"
+                    android:hint="@string/type_your_email"
                     android:inputType="textEmailAddress" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -80,7 +80,7 @@
                     style="@style/LoginTextInputInnerFieldStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Type Your Password"
+                    android:hint="@string/type_your_password"
                     android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -89,8 +89,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:textColor="@color/black"
-                android:text="Forgot password?" />
+                android:textColor="@color/salem_1"
+                android:text="@string/forgot_password" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button"
@@ -99,7 +99,8 @@
                 android:layout_marginTop="35dp"
                 android:layout_marginHorizontal="16dp"
                 android:background="@drawable/btn_round_1"
-                android:text="Sign In"
+                android:text="@string/sign_in"
+                android:textSize="17sp"
                 android:textColor="@color/white"
                 android:textStyle="bold"  />
 
@@ -108,8 +109,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:textColor="@color/black"
-                android:text="Not Registered Yet , Sign Up!" />
+                android:textColor="@color/salem_1"
+                android:text="@string/not_registered_yet_sign_up" />
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
