--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -32,7 +32,7 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_marginHorizontal="16dp"
-                android:text="Sign Up"
+                android:text="@string/sign_up"
                 android:textStyle="normal|bold"
                 android:textSize="28sp"
                 android:textAllCaps="false"
@@ -56,7 +56,7 @@
                     style="@style/LoginTextInputInnerFieldStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Type your Email"
+                    android:hint="@string/type_your_email"
                     android:inputType="textEmailAddress" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -80,7 +80,7 @@
                     style="@style/LoginTextInputInnerFieldStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Type Your Password"
+                    android:hint="@string/type_your_password"
                     android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,7 +104,7 @@
                     style="@style/LoginTextInputInnerFieldStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Retype Your Password"
+                    android:hint="@string/retype_your_password"
                     android:inputType="textPassword" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -115,7 +115,8 @@
                 android:layout_marginTop="70dp"
                 android:layout_marginHorizontal="16dp"
                 android:background="@drawable/btn_round_1"
-                android:text="Sign Up"
+                android:text="@string/sign_up"
+                android:textSize="17sp"
                 android:textColor="@color/white"
                 android:textStyle="bold" />
             <TextView
@@ -123,8 +124,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
-                android:textColor="@color/black"
-                android:text="Already Registered, Sign In!" />
+                android:textColor="@color/salem_1"
+                android:text="@string/already_registered_sign_in" />
 
         </LinearLayout>
 
