--- a/app/src/main/res/layout/activity_traceability_list.xml
+++ b/app/src/main/res/layout/activity_traceability_list.xml
@@ -53,7 +53,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
-                    android:text="Traceability Product List"
+                    android:text="@string/traceability_product_list"
                     android:textStyle="bold|normal"
                     android:textColor="@color/white"
                     android:textSize="18sp"/>
