--- a/app/src/main/res/layout/dialog_forgotpass.xml
+++ b/app/src/main/res/layout/dialog_forgotpass.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:background="@drawable/header_item_gradient"
             android:padding="10dp"
-            android:text="Forgot Password"
+            android:text="@string/forgot_password_tittle"
             android:textColor="@color/white"
             android:textSize="17sp"
             android:drawableLeft="@drawable/ic_lock_reset"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:layout_marginTop="8dp"
-            android:text="Enter your email address"
+            android:text="@string/enter_your_email_address"
             android:textSize="16sp"
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
@@ -62,7 +62,7 @@
             android:layout_marginEnd="10dp"
             android:textColor="@color/white"
             android:textSize="14sp"
-            android:text="Cancel"
+            android:text="@string/cancel"
             android:layout_marginBottom="8dp"
             app:cornerRadius="20dp"
             android:layout_marginTop="10dp"
@@ -79,7 +79,7 @@
             android:layout_marginEnd="40dp"
             android:textColor="@color/white"
             android:textSize="14sp"
-            android:text="Send"
+            android:text="@string/reset"
             android:layout_marginBottom="8dp"
             app:cornerRadius="20dp"
             android:layout_marginTop="10dp"
